# parseff

./: .gitignore  .ocamlformat  CHANGES.md  DEPLOYMENT.md  LICENSE  Makefile  OPTIMIZATION_LOG.md  README.md  README.mld  autoresearch-dashboard.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  dune  dune-project  parseff.opam  test_simple_list.ml
.github/workflows/: ci.yml  deploy-docs.yml
bench/: README.md  bench_angstrom.ml  bench_arithmetic.ml  bench_binary.ml  bench_csv.ml  bench_json.ml  bench_micro.ml  bench_quick.ml  bench_streaming.ml  bench_utf8.ml  bench_vs_angstrom.ml  dune  parseff_bench.ml  parseff_bench.mli
bench/support/: bench_case.ml  bench_gc_full.ml  bench_gc_quick.ml  bench_report.ml  bench_rss_linux.ml  bench_style.ml  dune
doc/: binary.mld  combinators.mld  convenience.mld  core.mld  diagnostics.mld  dune  errors.mld  primitives.mld  repetition.mld  streaming.mld  utf8.mld  zero-copy.mld
doc/guides/: comparison.mld  dune  expression-parser.mld  first-parser.mld  ip-address.mld  json-parser.mld  optimization.mld  streaming-commit.mld  streaming-csv.mld
documentation/: README.md  astro.config.mjs  package.json
documentation/src/components/: Head.astro
documentation/src/content/docs/: credits.md  index.md  index.mdx  performance.md  quick-start.md
documentation/src/content/docs/api/: Untitled  combinators.md  convenience.md  diagnostics.md  errors.md  overview.md  primitives.md  repetition.md  streaming.md  zero-copy.md
documentation/src/content/docs/examples/: expression-parser.md  ip-address.md  json-parser.md  zero-copy-performance.md
documentation/src/content/docs/guides/: comparison.md  error-accumulation.md  errors.md  first-parser.md  optimization.md  streaming.md
documentation/src/styles/: custom.css
examples/: better_errors.ml  better_errors.t  dune  eio_source.ml  lambda.ml  lambda.t  miou_source.ml  multilingual.ml  multilingual.t  png_header.ml  png_header.t  routes.ml  routes.t  sexpr.ml
examples/better_errors/: better_errors.t  dune  main.ml  run.t
examples/eio_source/: dune  eio_source.t  run.t
examples/lambda/: dune  run.t
examples/miou_source/: dune  main.ml  miou_source.t  run.t
examples/multilingual/: dune  multilingual.ml  run.t
examples/playground/: dune  main.ml  playground.ml  playground.t  run.t
examples/png_header/: dune  png_header.t  run.t
examples/routes/: dune  run.t
examples/sexpr/: dune  run.t  sexpr.t
examples/streaming_backtrack/: dune  run.t  streaming_backtrack.ml  streaming_backtrack.t
examples/streaming_commit/: dune  main.ml  run.t  streaming_commit.t
examples/streaming_window_exceeded/: dune  run.t  streaming_window_exceeded.ml  streaming_window_exceeded.t
experiments/: worklog.md
lib/: dune  parseff.ml  parseff.mli
tasks/: binary-plan.md
test/: dune  test_angstrom_compat.ml  test_binary.ml  test_css.ml  test_domains.ml  test_errors.ml  test_ip.ml  test_json.ml  test_primitives.ml  test_streaming.ml  test_utf8.ml
website/: astro.config.mjs  dune  fix-odoc-md.sh  generate-changelog.sh  package-lock.json  package.json
website/src/components/: Head.astro  PageSidebar.astro  PageTitle.astro
website/src/content/docs/: changelog.md  index.md
website/src/content/docs/api/: combinators.md  convenience.md  diagnostics.md  dune  errors.md  primitives.md  repetition.md  streaming.md  zero-copy.md
website/src/content/docs/guides/: comparison.md  dune  expression-parser.md  first-parser.md  ip-address.md  json-parser.md  optimization.md  streaming-commit.md  streaming-csv.md
website/src/plugins/: remark-bold-asides.mjs
website/src/styles/: custom.css
website/src/syntax-themes/: parseff-dark.json  parseff-light.json
