(library
 (name parseff_bench)
 (libraries parseff)
 (modules parseff_bench)
 (ocamlopt_flags
  (:standard -O3 -unbox-closures -unbox-closures-factor 20)))

(executables
 (names
  bench_angstrom
  bench_micro
  bench_json
  bench_csv
  bench_arithmetic
  bench_binary
  bench_utf8)
 (libraries parseff parseff_bench angstrom bigstringaf mparser re benchmark)
 (modules :standard \ parseff_bench bench_quick)
 (ocamlopt_flags
  (:standard -O3 -unbox-closures -unbox-closures-factor 20)))

(executable
 (name bench_quick)
 (libraries parseff parseff_bench)
 (modules bench_quick)
 (ocamlopt_flags
  (:standard -O3 -unbox-closures -unbox-closures-factor 20)))
