(documentation
 (package parseff)
 (mld_files primitives combinators repetition convenience errors diagnostics zero-copy streaming))

(mdx
 (files
  primitives.mld
  combinators.mld
  repetition.mld
  convenience.mld
  errors.mld
  diagnostics.mld
  zero-copy.mld
  streaming.mld)
 (libraries parseff re))
